parallax jump fix

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -116,7 +116,10 @@ section {
 
 	.container-fluid {
 		background: url(/img/740.jpg);
-		background-position: 50%;
+		background-size:cover;
+		background-attachment:fixed;
+		background-position: 50% 50px;
+		background-repeat: no-repeat;
 		height: calc(100vh - 50px);
 		.row{
 			height:100%;
